# wowwee

./: CMakeLists.txt  LICENSE  README.md  The Driver for Rovio Wowwee.md
WowWeeDriver/: WowweeDriver.chm
WowWeeDriver/reconstruction_version2.1/: IRStatus.cpp  reconstruction.pro  robotcameraexample.cpp  robotobstacle.cpp  saveImage.cpp
Wowwee/: CMakeLists.txt
Wowwee/core/: CMakeLists.txt  CMakeLists.txt~
Wowwee/core/demo/: findpinksquare.cpp  saveImage.cpp
Wowwee/core/robotdriver/: CMakeLists.txt
Wowwee/core/robotdriver/include/: robotdriver.h~
Wowwee/core/robotdriver/src/: robotdriver.cpp  robotdriver.cpp~
Wowwee/core/robotdriver/test/: robotobstacle.cpp
demo/: obstacleavoidance.cpp  runtld.cpp
driver/: CMakeLists.txt
driver/include/: jpegworkaround.h  robotcolor.h  robotdriver.h
driver/src/: robotdriver.cpp
thirdpart/TLD/: CMakeLists.txt
thirdpart/TLD/include/: TLD.h
