#OpenCV
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)

INCLUDE_DIRECTORIES(./include ${OpenCV_INCLUDE_DIRS} ${JPEG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdpart/TLD/include)

AUX_SOURCE_DIRECTORY(./src ROBOT_LIB_CPP)
MESSAGE(STATUS ${ROBOT_LIB_CPP})
#list(APPEND LIB_CPP ${ROBOT_LIB_CPP} ${OpenCV_LIBS} ${JPEG_LIBRARIES})
#MESSAGE(STATUS ${LIB_CPP})
ADD_LIBRARY(robotdriver ${ROBOT_LIB_CPP})

#list(APPEND LIB_CPP ${ROBOT_LIB_CPP} ${JPEG_LIBRARIES})
#MESSAGE(STATUS "LIB_CPP:" ${LIB_CPP})


#AUX_SOURCE_DIRECTORY(../demo DEMO_CPP)
ADD_EXECUTABLE(obstacleavoidance ${CMAKE_SOURCE_DIR}/demo/obstacleavoidance.cpp)
ADD_EXECUTABLE(findpinksquare ${CMAKE_SOURCE_DIR}/demo/findpinksquare.cpp)
ADD_EXECUTABLE(saveimage ${CMAKE_SOURCE_DIR}/demo/saveimage.cpp)
ADD_EXECUTABLE(runtld ${CMAKE_SOURCE_DIR}/demo/runtld.cpp)

TARGET_LINK_LIBRARIES(obstacleavoidance robotdriver ${OpenCV_LIBS} ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(saveimage robotdriver ${OpenCV_LIBS} ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(findpinksquare robotdriver ${OpenCV_LIBS} ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(runtld robotdriver tld LKTracker ferNN tld_utils ${OpenCV_LIBS} ${JPEG_LIBRARIES})

