
#OpenCV
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)

INCLUDE_DIRECTORIES(./include ${OpenCV_INCLUDE_DIRS} ${JPEG_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(./src ROBOT_LIB_CPP)
MESSAGE(STATUS ${ROBOT_LIB_CPP})
#list(APPEND LIB_CPP ${ROBOT_LIB_CPP} ${OpenCV_LIBS} ${JPEG_LIBRARIES})
#MESSAGE(STATUS ${LIB_CPP})
ADD_LIBRARY(robotdriver ${ROBOT_LIB_CPP})

#list(APPEND LIB_CPP ${ROBOT_LIB_CPP} ${JPEG_LIBRARIES})
#MESSAGE(STATUS "LIB_CPP:" ${LIB_CPP})


AUX_SOURCE_DIRECTORY(./test TEST_CPP)
ADD_EXECUTABLE(testobstacleavoiding ${TEST_CPP})
TARGET_LINK_LIBRARIES(testobstacleavoiding robotdriver ${OpenCV_LIBS} ${JPEG_LIBRARIES})
